--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,7 @@
       />
     </mat-form-field>
 
-    <mat-form-field appearance="fill" class="form-field">
+    <mat-form-field appearance="fill" class="form-field" (keyup.enter)="login()">
       <mat-label>Enter your password</mat-label>
       <input
         [autocomplete]="'current-password'"
