--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,3 +1,5 @@
+@import "../../variables";
+
 .login-page {
   height: 100%;
   width: 100%;
@@ -12,6 +14,13 @@
 
   .mat-form-field {
     width: 256px;
+  }
+
+  .warn-label {
+    width: 256px;
+    text-align: center;
+    margin-bottom: 16px;
+    color: $warn;
   }
 
   #login-button {
