--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,18 @@
 <div class="login-page">
+  <div class="login-banner">
+    <div id="banner-title">
+      <div class="banner-text">Manage your savings</div>
+      <div class="banner-text" id="animated-dot-container">
+        <div id="animated-dot">.</div>
+      </div>
+      <div class="banner-text">io</div>
+    </div>
+    <div class="banner-icons">
+      <mat-icon color="primary">account_balance</mat-icon>
+      <mat-icon>account_balance_wallet</mat-icon>
+      <mat-icon color="primary">payment</mat-icon>
+    </div>
+  </div>
   <form class="login-form">
     <mat-card class="login-form-card">
       <mat-card-content>
@@ -8,26 +22,12 @@
 
         <mat-form-field appearance="fill" class="form-field" id="email-input">
           <mat-label>Enter your email</mat-label>
-          <input
-            [formControl]="email"
-            [placeholder]="emailPlaceholder"
-            matInput
-            required
-          />
+          <input [formControl]="email" [placeholder]="emailPlaceholder" matInput required />
         </mat-form-field>
 
-        <mat-form-field
-          (keyup.enter)="!isLoginDisabled ? login() : undefined"
-          appearance="fill"
-          class="form-field"
-        >
+        <mat-form-field (keyup.enter)="!isLoginDisabled ? login() : undefined" appearance="fill" class="form-field">
           <mat-label>Enter your password</mat-label>
-          <input
-            [formControl]="password"
-            [type]="hidePassword ? 'password' : 'text'"
-            matInput
-            required
-          />
+          <input [formControl]="password" [type]="hidePassword ? 'password' : 'text'" matInput required />
           <button
             (click)="toggleHidePassword()"
             [attr.aria-label]="'Hide password'"
@@ -37,9 +37,7 @@
             matSuffix
             type="button"
           >
-            <mat-icon>{{
-              hidePassword ? "visibility_off" : "visibility"
-              }}</mat-icon>
+            <mat-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</mat-icon>
           </button>
         </mat-form-field>
 
