--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,15 +1,62 @@
-@import "../../variables";
+@import '../../variables';
 
 .login-page {
   height: 100%;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.login-banner {
+  display: flex;
+  flex-direction: column;
+
+  #banner-title {
+    display: flex;
+    margin: auto;
+    height: 100%;
+    font-family: 'Anton', sans-serif;
+    font-size: 64px;
+    text-align: center;
+    line-height: 110%;
+
+    .banner-text {
+      margin-top: auto;
+    }
+
+    #animated-dot-container {
+      color: $primary;
+      width: 15px;
+      height: 64px;
+    }
+
+    #animated-dot {
+      position: relative;
+      animation: animated-dot 6s infinite ease-in-out;
+    }
+  }
+
+  .banner-icons {
+    display: flex;
+    height: 80px;
+    justify-content: center;
+    margin-top: 16px;
+    gap: 0.5rem;
+
+    > mat-icon {
+      width: auto;
+      height: auto;
+      font-size: 4rem;
+    }
+  }
 }
 
 .login-form {
+  margin: 32px;
   display: flex;
-  height: 75%;
+  min-height: 300px;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
 
   .login-form-card {
@@ -28,6 +75,7 @@
   .warn-label {
     width: 256px;
     text-align: center;
+    font-weight: 500;
     color: $warn;
   }
 
@@ -38,5 +86,48 @@
   #login-button {
     width: 80px;
     margin-top: 8px;
+  }
+}
+
+@keyframes animated-dot {
+  0% {
+    opacity: 0;
+    transform: translate(0, -32px);
+  }
+  20% {
+    opacity: 1;
+    transform: translate(0, -6px);
+  }
+  90% {
+    opacity: 1;
+    transform: translate(0, -6px);
+  }
+  100% {
+    opacity: 0;
+    transform: (0, 24px);
+  }
+}
+
+@media screen and (max-width: 677px) {
+  .banner-text {
+    font-size: 3rem;
+  }
+
+  #animated-dot-container {
+    width: 12px !important;
+  }
+
+  .banner-icons > mat-icon {
+    font-size: 3rem !important;
+  }
+}
+
+@media screen and (max-width: 528px) {
+  .banner-text {
+    font-size: 2rem;
+  }
+
+  #animated-dot-container {
+    width: 8px !important;
   }
 }
