--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+
 html {
   height: 100%;
 }
@@ -6,7 +8,7 @@ body {
   height: calc(100% - 32px);
   padding: 16px 32px 16px 32px;
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
 
 .h-100 {
