--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,4 +1,4 @@
-@use "@angular/material" as mat;
+@use '@angular/material' as mat;
 
 // Include non-theme styles for core.
 @include mat.core();
@@ -6,7 +6,7 @@
 // Define a theme.
 $primary: mat.define-palette(mat.$cyan-palette, 600, 400, 700);
 $accent: mat.define-palette(mat.$green-palette, A200, A100, A400);
-$warn: mat.define-palette(mat.$red-palette, 700, 400, 700);
+$warn: mat.define-palette(mat.$red-palette, 500, 400, 700);
 
 $theme: mat.define-dark-theme(
   (
