Add navigation toolbar in board

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,1 +1,2 @@
-<p>board works!</p>
+<mat-toolbar class="navigation-toolbar"> Navigation toolbar </mat-toolbar>
+<div class="board">board content</div>
