--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,8 +5,7 @@ html {
 }
 
 body {
-  height: calc(100% - 32px);
-  padding: 16px 32px 16px 32px;
+  height: calc(100%);
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
