--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -1,7 +1,16 @@
 @import '../../variables';
 
 .navigation-toolbar {
+  height: 64px;
   color: $primary;
+
+  .navigation-tabs {
+    width: calc(100% - 80px);
+  }
+
+  .navigation-logout {
+    width: 80px;
+  }
 }
 
 .board {
