--- a/src/app/shared/spinner/spinner.component.html
+++ b/src/app/shared/spinner/spinner.component.html
@@ -1,5 +1,3 @@
-<mat-card class="spinner-card">
-  <mat-card-content>
-    <mat-progress-spinner [mode]="'indeterminate'" [diameter]="size"> </mat-progress-spinner>
-  </mat-card-content>
-</mat-card>
+<div>
+  <mat-progress-spinner [mode]="'indeterminate'" [diameter]="size"> </mat-progress-spinner>
+</div>
