--- a/src/app/account/main-account.component.html
+++ b/src/app/account/main-account.component.html
@@ -1,15 +1,23 @@
-<mat-card class="main-account-card">
-  <mat-card-content>
-    <div>
-      <div *ngIf="userAccountState.content$ | async as userAccount">
-        {{ 'Account balance: ' + userAccount.totalBalance + userAccount.currency }}
-      </div>
-      <div *ngIf="userAccountState.error$ | async as error">
-        <div *ngIf="error">Could not load main user account</div>
-      </div>
-    </div>
-  </mat-card-content>
-  <mat-card-footer *ngIf="userAccountState.loading$ | async">
-    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
-  </mat-card-footer>
-</mat-card>
+<div class="dashboard">
+  <mat-card class="main-account-card">
+    <mat-card-content>
+      <mat-card-title id="title">
+        {{ 'Balance' }}
+      </mat-card-title>
+      <mat-divider id="divider"></mat-divider>
+      <mat-card-content id="balance">
+        <div>
+          <div *ngIf="userAccountState.content$ | async as userAccount">
+            {{ userAccount.totalBalance + ' ' + userAccount.currency }}
+          </div>
+          <div *ngIf="userAccountState.error$ | async as error">
+            <div *ngIf="error">Could not load main user account</div>
+          </div>
+        </div>
+      </mat-card-content>
+    </mat-card-content>
+    <mat-card-footer *ngIf="userAccountState.loading$ | async">
+      <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+    </mat-card-footer>
+  </mat-card>
+</div>
