--- a/src/app/account/main-account.component.scss
+++ b/src/app/account/main-account.component.scss
@@ -1,2 +1,33 @@
+@import '../../variables';
+
+.dashboard {
+  padding-left: 10%;
+  padding-right: 10%;
+  display: flex;
+}
+
 .main-account-card {
+  height: 80px;
+  width: 256px;
+
+  > mat-card-content {
+    height: calc(100% - 4px);
+
+    #title {
+      font-size: 16px;
+    }
+
+    #divider {
+      background: $primary;
+      opacity: 75%;
+      margin-bottom: 16px;
+    }
+
+    #balance {
+      font-size: 24px;
+      font-family: 'Roboto', 'Helvetica Neue', sans-serif;
+      font-weight: 700;
+      margin-top: 4px;
+    }
+  }
 }
