Create overview for main account
* Add board component and router-paths

* Add navigation toolbar in board

* Add logout button on board

* Add router to main-account

* Add commons service and account service

* Add getting main account and basic display

* Add balance card

* Add error icon for main account card

--- a/src/app/account/main-account.component.html
+++ b/src/app/account/main-account.component.html
@@ -1,7 +1,25 @@
-<p>main-account works!</p>
-<div>
-  <div>
-    {{ 'Your balance is: ' + this.userAccount?.totalBalance + this.userAccount?.currency }}
-  </div>
-  <button (click)="logout()">Logout</button>
+<div class="dashboard">
+  <mat-card class="main-account-card">
+    <mat-card-content>
+      <mat-card-title id="title">
+        {{ 'Balance' }}
+      </mat-card-title>
+      <mat-divider id="divider"></mat-divider>
+      <mat-card-content id="balance">
+        <div>
+          <div *ngIf="userAccountState.content$ | async as userAccount">
+            {{ userAccount.totalBalance + ' ' + userAccount.currency }}
+          </div>
+          <div *ngIf="userAccountState.error$ | async as error">
+            <mat-icon color="warn" [matTooltip]="'Could not get account balance'" [matTooltipPosition]="'right'"
+              >error_outline
+            </mat-icon>
+          </div>
+        </div>
+      </mat-card-content>
+    </mat-card-content>
+    <mat-card-footer *ngIf="userAccountState.loading$ | async">
+      <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+    </mat-card-footer>
+  </mat-card>
 </div>
