--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,2 +1,8 @@
 $warn: #e53935;
 $primary: #26c6da;
+
+$very-dark-grey: #212121;
+$dark-grey: #363636;
+
+$light-grey: #424242;
+$very-light-grey: #595959;
