--- a/src/app/account/main-account.component.scss
+++ b/src/app/account/main-account.component.scss
@@ -4,6 +4,7 @@
   padding-left: 10%;
   padding-right: 10%;
   display: flex;
+  flex-direction: column;
 }
 
 .main-account-card {
@@ -31,4 +32,13 @@
       margin-top: 4px;
     }
   }
+}
+
+.sub-accounts {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 1rem;
+  column-gap: 1rem;
+
+  margin-top: 2rem;
 }
