Extract #divider to styles.scss as class

--- a/src/app/account/account/account-card/savings-card/savings-card.component.html
+++ b/src/app/account/account/account-card/savings-card/savings-card.component.html
@@ -3,7 +3,7 @@
     <mat-card-title id="title">
       {{ savingsAccount.name }}
     </mat-card-title>
-    <mat-divider id="divider"></mat-divider>
+    <mat-divider class="divider op-75"></mat-divider>
     <mat-card-content id="content">
       <div id="balance">
         {{ savingsAccount.balance + ' ' + savingsAccount.currency }}
