--- a/src/app/account/main-account.component.html
+++ b/src/app/account/main-account.component.html
@@ -4,7 +4,7 @@
       <mat-card-title id="title">
         {{ 'Balance' }}
       </mat-card-title>
-      <mat-divider id="divider"></mat-divider>
+      <mat-divider class="divider"></mat-divider>
       <mat-card-content id="balance">
         <div>
           <div *ngIf="userAccountState.content$ | async as userAccount">
