--- a/src/app/account/account/account-card/savings-card/savings-card.component.html
+++ b/src/app/account/account/account-card/savings-card/savings-card.component.html
@@ -7,6 +7,7 @@
     <mat-card-content id="content">
       <div id="balance">
         {{ savingsAccount.balance + ' ' + savingsAccount.currency }}
+        <!-- todo: add icon for show description-->
         <mat-icon
           (click)="toggleShowDescription()"
           *ngIf="canShowDescription"
