--- a/src/variables.scss
+++ b/src/variables.scss
@@ -6,3 +6,11 @@ $dark-grey: #363636;
 
 $light-grey: #424242;
 $very-light-grey: #595959;
+
+$green: #2e723b;
+$light-green: #4fd18b;
+$very-light-green: #dcf5e8;
+
+$red: #d14f4f;
+$light-red: #dd6e6a;
+$very-light-red: #f5dcdc;
