--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,6 +1,17 @@
 $warn: #e53935;
 $primary: #26c6da;
 
+$primary-light: #485EEA;
+$primary-medium: #6215DD;
+$primary-dark: #3B108F;
+$new-green: #185832;
+$new-light-green: #119B48;
+$light-yellow: #FCD91E;
+$yellow: #C7AB14;
+$light-purple: #C28AFF;
+$purple: #9063C0;
+
+
 $very-dark-grey: #212121;
 $dark-grey: #363636;
 
