--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Maven+Pro:wght@400;500;600&family=Roboto:wght@300;400;700&display=swap');
 @import 'variables.scss';
 
 html {
@@ -8,24 +9,26 @@ html {
 body {
   height: calc(100%);
   margin: 0;
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
+  font-family: "Maven Pro", sans-serif;
 }
 
+// Application component styles
 .h-100 {
   height: 100%;
 }
 
-// Application component styles
-
-.divider {
-  background: $primary;
-  margin-bottom: 16px !important;
-}
-
-.op-75 {
-  opacity: 75%;
+.w-100 {
+  width: 100%;
 }
 
 .d-flex {
   display: flex;
+}
+
+h1 {
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 40px;
+  letter-spacing: -0.5px;
+  margin: 0;
 }
