--- a/src/theme.scss
+++ b/src/theme.scss
@@ -4,20 +4,20 @@
 @include mat.core();
 
 // Define a theme.
-$primary: mat.define-palette(mat.$cyan-palette, 600, 400, 700);
-$accent: mat.define-palette(mat.$green-palette, A200, A100, A400);
+$primary: mat.define-palette(mat.$indigo-palette, 600, 400, 700);
+$accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 $warn: mat.define-palette(mat.$red-palette, 500, 400, 700);
 
-$theme: mat.define-dark-theme(
-  (
-    color: (
-      primary: $primary,
-      accent: $accent,
-      warn: $warn,
-    ),
-    typography: mat.define-typography-config(),
-    density: 0,
-  )
+$theme: mat.define-light-theme(
+    (
+      color: (
+        primary: $primary,
+        accent: $accent,
+        warn: $warn,
+      ),
+      typography: mat.define-typography-config(),
+      density: 0,
+    )
 );
 
 // Include all theme styles for the components.
