--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,7 @@ html {
 body {
   height: calc(100%);
   margin: 0;
-  font-family: "Maven Pro", sans-serif;
+  font-family: 'Maven Pro', sans-serif;
 }
 
 // Application component styles
