--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,16 +1,15 @@
 $warn: #e53935;
 $primary: #26c6da;
 
-$primary-light: #485EEA;
-$primary-medium: #6215DD;
-$primary-dark: #3B108F;
+$primary-light: #485eea;
+$primary-medium: #6215dd;
+$primary-dark: #3b108f;
 $new-green: #185832;
-$new-light-green: #119B48;
-$light-yellow: #FCD91E;
-$yellow: #C7AB14;
-$light-purple: #C28AFF;
-$purple: #9063C0;
-
+$new-light-green: #119b48;
+$light-yellow: #fcd91e;
+$yellow: #c7ab14;
+$light-purple: #c28aff;
+$purple: #9063c0;
 
 $very-dark-grey: #212121;
 $dark-grey: #363636;
