--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,25 +1,21 @@
 <div class="login-page">
   <mat-card class="overview-panel">
     <div class="savings-logo">
-      <img alt="Savings logo" height="32" ngSrc="assets/savings-logo.svg" width="32">
-      <span>
-        Savings
-      </span>
+      <img alt="Savings logo" height="32" ngSrc="assets/savings-logo.svg" width="32" />
+      <span> Savings </span>
     </div>
-    <img alt="Budget image" class="overview-image" height="767" ngSrc="assets/Budget-1.png" width="689">
+    <img alt="Budget image" class="overview-image" height="767" ngSrc="assets/Budget-1.png" width="689" />
     <h1 id="description-headline">Get better with money</h1>
-    <span id="description"> Savings-io is an app that helps users manage and monitor their assets.
-      It is designed to help users budget and plan for their financial future.
-      With Savings-io, users can set financial goals and track their progress towards achieving them.</span>
+    <span id="description">
+      Savings-io is an app that helps users manage and monitor their assets. It is designed to help users budget and
+      plan for their financial future. With Savings-io, users can set financial goals and track their progress towards
+      achieving them.</span
+    >
   </mat-card>
   <div class="login-panel">
-    <img alt="Savings logo" height="42" ngSrc="assets/savings-logo-blue.svg" style="margin: 16px;" width="42">
-    <h1>
-      Log In
-    </h1>
-    <span class="login-additional-text">
-      Create, monitor and save smarter
-    </span>
+    <img alt="Savings logo" height="42" ngSrc="assets/savings-logo-blue.svg" style="margin: 16px" width="42" />
+    <h1>Log In</h1>
+    <span class="login-additional-text"> Create, monitor and save smarter </span>
     <form class="login-form">
       <mat-card class="login-form-card">
         <mat-card-content>
@@ -29,12 +25,12 @@
 
           <mat-form-field appearance="fill" class="form-field" id="email-input">
             <mat-label>Enter your email</mat-label>
-            <input [formControl]="email" [placeholder]="emailPlaceholder" matInput required/>
+            <input [formControl]="email" [placeholder]="emailPlaceholder" matInput required />
           </mat-form-field>
 
           <mat-form-field (keyup.enter)="!isLoginDisabled ? login() : undefined" appearance="fill" id="password-input">
             <mat-label>Enter your password</mat-label>
-            <input [formControl]="password" [type]="isHidePassword ? 'password' : 'text'" matInput required/>
+            <input [formControl]="password" [type]="isHidePassword ? 'password' : 'text'" matInput required />
             <button
               (click)="toggleHidePassword()"
               [attr.aria-label]="'Hide password'"
@@ -66,4 +62,3 @@
     </form>
   </div>
 </div>
-
