Format board and accounts style.

--- a/src/app/account/account/account-card/investment-card/investment-card.component.html
+++ b/src/app/account/account/account-card/investment-card/investment-card.component.html
@@ -5,7 +5,7 @@
       {{ investmentAccount.name }}
     </mat-card-title>
     <mat-divider class="divider op-75"></mat-divider>
-    <mat-card-content id="content">
+    <div id="content">
       <div id="balance">
         <div>
           {{ investmentAccount.assetQuantity + ' ' + investmentAccount.asset }}
@@ -28,6 +28,6 @@
           {{ investmentAccount.investmentResultValue }}
         </div>
       </div>
-    </mat-card-content>
+    </div>
   </mat-card-content>
 </mat-card>
