--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,10 @@
 <div class="login-page">
   <mat-card class="overview-panel">
     <div class="savings-logo">
-      <img alt="Savings logo" height="32" ngSrc="assets/savings-logo.svg" width="32" />
+      <img alt="Savings logo" height="32" ngSrc="assets/savings-logo-multicolor.svg" width="32" />
       <span> Savings </span>
     </div>
-    <img alt="Budget image" class="overview-image" height="767" ngSrc="assets/Budget-1.png" width="689" />
+    <img alt="Budget image" class="overview-image" height="767" ngSrc="assets/Budget-overview.png" width="689" />
     <h1 id="description-headline">Get better with money</h1>
     <span id="description">
       Savings-io is an app that helps users manage and monitor their assets. It is designed to help users budget and
