--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,3 +32,8 @@ h1 {
   letter-spacing: -0.5px;
   margin: 0;
 }
+
+.reverse-button {
+  background: #fff !important;
+  color: $primary !important;
+}
