--- a/src/app/account/account/account-card/investment-card/investment-card.component.scss
+++ b/src/app/account/account/account-card/investment-card/investment-card.component.scss
@@ -2,7 +2,6 @@
 
 .investment-card {
   width: 256px;
-  background-image: linear-gradient(to bottom right, $very-light-grey, $light-grey);
 
   > mat-card-content {
     height: calc(100% - 4px);
@@ -13,8 +12,8 @@
 
     #content {
       font-size: 20px;
-      font-family: 'Roboto', 'Helvetica Neue', sans-serif;
-      font-weight: 700;
+      font-family: 'Roboto', sans-serif;
+      font-weight: 600;
       margin-top: 4px;
 
       #balance {
