--- a/src/app/account/main-account.component.scss
+++ b/src/app/account/main-account.component.scss
@@ -1,16 +1,13 @@
 @import '../../variables';
 
 .dashboard {
-  padding-left: 10%;
-  padding-right: 10%;
   display: flex;
   flex-direction: column;
 }
 
 .main-account-card {
-  height: 80px;
+  height: 96px;
   width: 256px;
-  background-image: linear-gradient(to bottom right, $very-light-grey, $light-grey);
 
   > mat-card-content {
     height: calc(100% - 4px);
@@ -21,8 +18,8 @@
 
     #balance {
       font-size: 24px;
-      font-family: 'Roboto', 'Helvetica Neue', sans-serif;
-      font-weight: 700;
+      font-family: 'Roboto', sans-serif;
+      font-weight: 600;
       margin-top: 4px;
     }
   }
