--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="navigation-toolbar">
   <div class="navigation-tabs"></div>
   <div class="navigation-logout">
-    <button (click)="logout()" color="primary" mat-raised-button type="button">Logout</button>
+    <button color="primary" (click)="logout()" mat-raised-button type="button">Logout</button>
   </div>
 </mat-toolbar>
 <div class="board">
